# flashcontainer

./: .gitignore  .pylintrc  Developing.md  LICENSE  README.md  overview.plantuml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: push.yaml  python-package.yml
example/: example.xml  run.bat  run.sh
examples/: README.md
examples/arduino/: avr5.xn  example.md  gen_param.bat  gen_param.sh  output.map  platformio.ini  run_simavr.bat
examples/arduino/param/: param.c  param.h  param.hex  param.ld  param.pyhexdump  param.xml
examples/arduino/src/: main.cpp
examples/arduino_struct_test/: example.md  gen_param.bat  gen_param.sh  output.map  platformio.ini  run_simavr.sh
examples/arduino_struct_test/param/: param.c  param.crc  param.h  param.hex  param.ld  param.pyhexdump  param.xml  structexample.xml  weird.xml
examples/arduino_struct_test/src/: main.cpp
examples/aurix_bmhdr/: bmhdr.mao  bmhdr.xml  example.md  run.sh
examples/safety/: example.md  run.sh  safety.xml
src/flashcontainer/: __init__.py  __main__.py  a2lwriter.py  byteconv.py  cfilewriter.py  checksum.py  datamodel.py  fileargparse.py  gnuldwriter.py  hexwriter.py  packageinfo.py  pargen.py  pargen_1.0.xsd  pargen_1.1.xsd  pyhexdumpwriter.py  tc3xx.py  tc3xx_abmhd.py  tc3xx_abmhd.xml  tc3xx_cmd.py  xmlparser.py
src/pargen/: byteconv.py  cfilewriter.py  datamodel.py  gnuldwriter.py  hexwriter.py  pargen.py  pargen_1.0.xsd  xmlparser.py
tests/: test_byteconv.py  test_checksum.py  test_datamodel.py  test_model_validate.py  test_pargen.py  test_tc3xx_abmhd.py  test_xmlparser.py
tests/collateral/: abmhd_ref.xml  fail_validation.xml  invalid.xml  pyhex_ref.json
tests/collateral/garbage/: invalidexample_jsoninp.xml  invalidstructexample_arraycnt.xml  invalidstructexample_arrayinp.xml  invalidstructexample_fieldname.xml  invalidstructexample_nojson.xml  invalidstructexample_noname.xml  invalidstructexample_undefined.xml
tests/example/: example.xml  run.sh  structexample.xml
xsd/: pargen_1.0.xsd
