[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pargen_haju_schulz"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "src/pargen"
]