[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcontainer"
version = "0.5.0"
requires-python = ">=3.8"
description = "A tooling for flashable parameter data container generation"
readme = "README.md"
license = {text = "BSD License"}
authors = [
  {name = "Haju Schulz", email = "haju.schulz@online.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

dependencies = [
    "crc >= 3.0",
    "intelhex >= 2.3.0",
    "json5 >= 0.9.10",
    "lxml >= 4.9.2",
    "toml >= 0.10.2"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
repository = "https://github.com/nhjschulz/flashcontainer"

[project.scripts]
pargen = "flashcontainer.pargen:pargen_cli"
tc3xx = "flashcontainer.tc3xx:tc3xx_cli"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
