[metadata]
name = flashcontainer
version = 0.0.1
description = A tooling for flashable parameter data container generation
long_description = file: README.md
author = Haju Schulz
author_email = haju.schulz@online.de
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
flashcontainer =
  pargen_1.0.xsd

[options.entry_points]
console_scripts =
    pargen = flashcontainer.pargen:pargen