[metadata]
name = flashcontainer
version = 0.0.4

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.entry_points]
console_scripts =
    pargen = flashcontainer.pargen:pargen_cli

[options.packages.find]
where=src

[options.package_data]
flashcontainer =
  pargen_1.0.xsd
  Concept.png
